--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <div class="contato">
                     <a href="mailto:giselealvesdosreis@gmail.com"><img class="icones-contato" src="./icones/gmail.png"></a>
-                    <a href="https://www.linkedin.com/in/gisele-reis-140312204/" target="_blank"><img class="icones-contato" src="./icones/linkedin.png"></a>
+                    <a href="https://www.linkedin.com/in/giselealvesreis/" target="_blank"><img class="icones-contato" src="./icones/linkedin.png"></a>
                     <a href="https://github.com/gisele-reis" target="_blank"><img class="icones-contato" src="./icones/github.png"></a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         <footer>
             <div class="footer-informacoes">
                 <img src="./icones/contato.png" class="icones-informacoes">
-                <p class="fale-comigo">Fale comigo através do meu <a href="mailto:giselealvesdosreis@gmail.com">e-mail</a> ou <a href="https://api.whatsapp.com/send?phone=5512991054444&text=Ol%C3%A1%2C%20Gisele!%20Estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20seu%20site.">whatsapp</a>.</p>
+                <p class="fale-comigo">Fale comigo através do meu <a href="mailto:giselealvesdosreis@gmail.com">e-mail</a>.</p>
             </div>
 
             <p>Gisele Reis<br>2022</p>
