atualização 'sobre mim' e 'formação'

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div class="texto-sobre-mim">
                     <h3 class="titulo">Sobre mim</h3>
-                    <p>Oi! Eu sou a Gisele e sou bacharela em Biomedicina. Porém, sempre gostei muito de tecnologia e programação, por isso me tornei estudante de Análise e Desenvolvimento de Sistemas e, atualmente, participo do Empower Code for Women by Zenvia e Alura.</p>
+                    <p>Oi! Eu sou a Gisele e sou bacharela em Biomedicina. Porém, sempre gostei muito de tecnologia e programação, por isso me tornei estudante de Análise e Desenvolvimento de Sistemas e, em 2022, participei do Empower Code for Women by Zenvia e Alura.</p>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                         <br>
                     </p>
                     <p class="caixa-texto">
-                        Análise e Desenvolvimento de Sistemas - Fatec (cursando 1º semestre).
+                        Análise e Desenvolvimento de Sistemas - Fatec (cursando 2º semestre).
                         <br>
                     </p>
                     <p class="caixa-texto">
