--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3 class="titulo">Habilidades</h3>
                 <ul>
                     <li class="caixa-texto">Bom relacionamento interpessoal, capacidade de adaptação e facilidade em novos aprendizados.</li>
-                    <li class="caixa-texto">Aprendendo HTML, CSS, JavaScript e C#, sempre em busca de aprimorar meus resultados.</li>
+                    <li class="caixa-texto">Aprendendo HTML, CSS, JavaScript e Java, sempre em busca de aprimorar meus resultados.</li>
                 </ul>
             </div>
 
